fixed right sidebar alignment

--- a/less/custom/custom-nav.less
+++ b/less/custom/custom-nav.less
@@ -199,7 +199,7 @@ body {
       left: 100%;
 
       .queue-title {
-        padding: 5px 0;
+        padding: 4px 0;
         text-align: center;
         border-bottom: 1px solid @sidebar-color;
       }
